examples/datalog/12_errors/33_unbound_head_var.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_unbound_head
Knowledge graph 'test_unbound_head' created.
Switched to knowledge graph: test_unbound_head
> .kg use test_unbound_head
Switched to knowledge graph: test_unbound_head
> +data[(1, 2), (3, 4)].
Inserted 2 fact(s) into 'data'.
> unsafe_rule(X, Y) :- data(X, _).
Script error: Query execution failed: Unsafe rule: Atom { relation: "unsafe_rule", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
